[tool.poetry]
name = "tile mover"
version = "0.1.1"
description = ""
authors = ["JadenCodes (xJaden#1338)"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"